--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mysql2": "^3.11.0",
     "nodemon": "^3.1.4",
     "path": "^0.12.7",
+    "regex": "^4.3.2",
     "sequelize": "^6.37.3"
   }
 }
